--- a/templates/group/assistance.html
+++ b/templates/group/assistance.html
@@ -4,6 +4,10 @@
 {% endcomment %}
 
 {% block content %}
+<div class="container-fluid">
+<h1>Hjelp! <small>Gruppene du kan hjelpe</small></h1>
+<hr />
 {% include "group/groups.html" with join=1 %}
+</div>
 {% endblock %}
 
