--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -6,13 +6,19 @@
 <div class="bar">
     <div class="navigation">
         <!-- my -->
-        <a class="button" href="/my/">Din Side</a>
+        <a class="button" href="/my/">
+            <i class="icon icon-home icon-white"></i>
+            Din Side
+        </a>
         <!-- group -->
         <a class="button" href="/group/all">Andre grupper</a>
         <!-- assistance -->
         <a class="button" href="/group/assistance">Gruppene i nød</a>
         <!-- prototype -->
-        <a class="button" href="/login/leave">Logg av</a>
+        <a class="button" href="/login/leave">
+            Logg av
+            <i class="icon icon-off icon-white"></i>
+        </a>
     </div>
 </div>
 {% endif %}
