adds a tag content table for the detailed group interface

--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -232,6 +232,14 @@ h1, h2, h3, h4, h5, h6 {
         .hint {
             margin-right: 0.5em;
         }
+
+        .locked {
+            background-color: #8b0000;
+        }
+
+        .open {
+            background-color: #228b22;
+        }
     }
 
 
