--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -8,7 +8,7 @@
         <!-- my -->
         <a class="button" href="/my/">
             <i class="icon icon-home icon-white"></i>
-            Din Side
+            Din side
         </a>
         <!-- group -->
         <a class="button" href="/group/all">Andre grupper</a>
