--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -23,20 +23,26 @@
         <div title="ny gruppe" class="flag marker" pk="{{ group.pk }}"><i class="icon icon-star icon-white"></i></div>
         {% endif %}
 
+        {% if not group.is_open %}
+        <div title="åpen gruppe" class="flag locked" pk="{{ group.pk }}"><i class="icon icon-lock icon-white"></i></div>
+        {% else %}
+        <div title="låst gruppe" class="flag open" pk="{{ group.pk }}"><i class="icon icon-lock icon-white"></i></div>
+        {% endif %}
+
         {% if group.needs_assistance %}
         <div title="trenger hjelp" class="flag assistance" pk="{{ group.pk }}"><i class="icon icon-flag icon-white"></i></div>
         {% endif %}
 
     </div>
 
-    {% if controls %}
     <!-- menu -->
+    {% if controls %}
     <div class="menu" pk="{{ group.pk }}">
         <div class="btn-toolbar">
             <div class="btn-group">
                 <a href="/group/{{ group.pk }}" class="btn btn-mini" id="inspect">
                     <i class="icon icon-eye-open"></i>
-                    Undersøk
+                    Se på
                 </a>
                 <a class="btn btn-mini" id="contact" href="#contactPopup{{ group.pk }}" role="button" class="btn" data-toggle="modal">
                     <i class="icon icon-envelope"></i>
@@ -46,7 +52,7 @@
                 {% if group.needs_assistance %}active{% endif %}
                 " id="assist" data-toggle="button">
                     <i class="icon icon-flag icon-white"></i>
-                    Be om hjelp
+                    Tilkall orakel
                 </button>
             </div>
             <div class="btn-group pull-right">
@@ -102,8 +108,9 @@
     {% if group.tags|length > 0 %}
         {% include "tag/tags.html" with tags=group.tags  %}
     {% endif %}
-    <!-- join -->
 
+
+    <!-- contact -->
     <div class="modal hide fade" id="contactPopup{{ group.pk }}" pk="{{ group.pk }}" tabindex="-1" role="dialog" aria-labelledby="contactPopup{{group.pk}}" aria-hidden="true">
     <form action="/group/{{ group.pk }}/correspondence" method="POST">{% csrf_token %}
         <div class="modal-header">
